update all files

--- a/Singolo/index.html
+++ b/Singolo/index.html
@@ -22,7 +22,7 @@
         <nav class="header__navigation navigation">
           <ul class="navigation__list list">
             <li class="navigation__item">
-              <a class="navigation__link active" href="#">home</a>
+              <a class="navigation__link link--active" href="#">home</a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="#services">services</a>
