update all files

--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -13,12 +13,10 @@
     <main>
         <div class="page">
             <div class="keyboard">
-                <button class="keyboard__key key">
-                    <div class="key__content">
+                <button class="keyboard__key key key--margin-left">
                         <div class="key__title">a</div>
                         <div class="key__description">antelope</div>
                         <audio class="key__audio" src="assets/audio/antelope.mp3" type="audio/mpeg"></audio>
-                    </div>
                 </button>
                 <button class="keyboard__key key">
                     <div class="key__content">
@@ -34,7 +32,7 @@
                         <audio class="key__audio" src="assets/audio/donkey.mp3" type="audio/mpeg"></audio>
                     </div>
                 </button>
-                <button class="keyboard__key key">
+                <button class="keyboard__key key key--margin-right">
                     <div class="key__content">
                         <div class="key__title">f</div>
                         <div class="key__description">fox</div>
