--- a/css-variables-and-js/index.html
+++ b/css-variables-and-js/index.html
@@ -65,13 +65,13 @@
                     <div class="editor-area__modification modification">
                         <form class="modification__form">
                             <input class="modification__input input-color" type="color" name="background" value="#afafaf">
-                            <input class="modification__input input-range input-contrast" type="range" min="30" max="200" value="100" name="contrast" step="1" data-sizing="%">
-                            <input class="modification__input input-range input-brightness" type="range" min="20" max="200" value="100" name="brightness" step="1" data-sizing="%">
-                            <input class="modification__input input-range input-tint" type="range" min="0" max="360" value="0" name="tint" step="1" data-sizing="deg">
-                            <input class="modification__input input-range input-blur" type="range" min="0" max="10" value="0" name="blur" step="0.1" data-sizing="px">
-                            <input class="modification__input input-range input-suturation" type="range" min="0" max="200" value="100" name="suturation" step="1" data-sizing="%">
-                            <input class="modification__input input-range input-grayscale" type="range" min="0" max="100" value="0" name="grayscale" step="1" data-sizing="%">
-                            <input class="modification__input input-range input-sepia" type="range" min="0" max="100" value="0" name="sepia" step="1" data-sizing="%">
+                            <input class="modification__input input-range input-contrast" type="range" min="30" max="200" value="100" name="contrast" step="1" data-sizing="%" data-name="contrast">
+                            <input class="modification__input input-range input-brightness" type="range" min="20" max="200" value="100" name="brightness" step="1" data-sizing="%" data-name="brightness">
+                            <input class="modification__input input-range input-tint" type="range" min="0" max="360" value="0" name="tint" step="1" data-sizing="deg" data-name="hue-rotate">
+                            <input class="modification__input input-range input-blur" type="range" min="0" max="10" value="0" name="blur" step="0.1" data-sizing="px" data-name="blur">
+                            <input class="modification__input input-range input-suturation" type="range" min="0" max="200" value="100" name="suturation" step="1" data-sizing="%" data-name="saturate">
+                            <input class="modification__input input-range input-grayscale" type="range" min="0" max="100" value="0" name="grayscale" step="1" data-sizing="%" data-name="grayscale">
+                            <input class="modification__input input-range input-sepia" type="range" min="0" max="100" value="0" name="sepia" step="1" data-sizing="%" data-name="sepia">
                             
                         </form>
                         <div class="modification__buttons">
