--- a/dynamic-landing-page/index.html
+++ b/dynamic-landing-page/index.html
@@ -38,6 +38,6 @@
 
     </main>
     <footer></footer>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
