update js file and crate media query

--- a/dynamic-landing-page/index.html
+++ b/dynamic-landing-page/index.html
@@ -29,8 +29,8 @@
                     <span class="time__second time__number">48</span>
                 </p>
                 <p class="daytime__date date">
-                    <span class="date__day-of-week">Monday</span>, 
-                    <span class= date__date>17</span> 
+                    <span class="date__day-of-week">Monday</span> 
+                    <span class="date__date">17</span> 
                     <span class="date__month">September</span>
                 </p>
             </div>
