update design and all files, create media query

--- a/Flex Panel Gallery/index.html
+++ b/Flex Panel Gallery/index.html
@@ -6,7 +6,7 @@
     <title>Five reasons to visit Belarus</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
@@ -16,40 +16,50 @@
         <div class="page">
             <div class="blocks">
                 <div class="block">
-                    <img class="block__image block__image_image-center" src="assets/images/Architectural_heritage.jpg" alt="architectural_heritage">
-                    <p class="block__text block__text_text-top">first <br>reason:</p>
-                    <p class="block__text block__text_text-center">five</p>
-                    <p class="block__text block__text_text-down">architectural heritage</p>
+                    <span class="block__left-top left-top--position left-top--size"></span>
+                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <img class="block__image block__image--image_center" src="./assets/images/Architectural_heritage.jpg" alt="architectural_heritage">
+                    <p class="block__text block__text--text_top">first <br>reason:</p>
+                    <p class="block__text block__text--text_center">five</p>
+                    <p class="block__text block__text--text_down">architectural heritage</p>
                 </div>
                 <div class="block">
-                    <img class="block__image block__image_image-center" src="assets/images/Nature.jpg" alt="nature">
-                    <p class="block__text block__text_text-top">second <br>reason:</p>
-                    <p class="block__text block__text_text-center">reasons</p>
-                    <p class="block__text block__text_text-down">nature</p>
+                    <span class="block__left-top left-top--position left-top--size"></span>
+                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <img class="block__image block__image--image_center" src="./assets/images/Nature.jpg" alt="nature">
+                    <p class="block__text block__text--text_top">second <br>reason:</p>
+                    <p class="block__text block__text--text_center">reasons</p>
+                    <p class="block__text block__text--text_down">nature</p>
                 </div>
                 <div class="block">
-                    <img class="block__image block__image_image-center" src="assets/images/Military_history.jpg" alt="military_history">
-                    <p class="block__text block__text_text-top">third <br>reason:</p>
-                    <p class="block__text block__text_text-center">to</p>
-                    <p class="block__text block__text_text-down">military history</p>
+                    <span class="block__left-top left-top--position left-top--size"></span>
+                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <img class="block__image block__image--image_center" src="./assets/images/Military_history.jpg" alt="military_history">
+                    <p class="block__text block__text--text_top">third <br>reason:</p>
+                    <p class="block__text block__text--text_center">to</p>
+                    <p class="block__text block__text--text_down">military history</p>
                 </div>
                 <div class="block">
-                    <img class="block__image block__image_image-center" src="assets/images/Belarussian_art.jpg" alt="belarussian_art">
-                    <p class="block__text block__text_text-top">fourth <br>reason:</p>
-                    <p class="block__text block__text_text-center">visit</p>
-                    <p class="block__text block__text_text-down">arts and culture</p>
+                    <span class="block__left-top left-top--position left-top--size"></span>
+                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <img class="block__image block__image--image_center" src="./assets/images/Belarussian_art.jpg" alt="belarussian_art">
+                    <p class="block__text block__text--text_top">fourth <br>reason:</p>
+                    <p class="block__text block__text--text_center">visit</p>
+                    <p class="block__text block__text--text_down">arts and culture</p>
                 </div>
                 <div class="block">
-                    <img class="block__image block__image_image-center" src="assets/images/Belarussian_cousine.png" alt="belarussian_cousine">
-                    <p class="block__text block__text_text-top">fifth <br>reason:</p>
-                    <p class="block__text block__text_text-center">belarus</p>
-                    <p class="block__text block__text_text-down">national cuisine</p>
+                    <span class="block__left-top left-top--position left-top--size"></span>
+                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <img class="block__image block__image--image_center" src="./assets/images/Belarussian_cousine.png" alt="belarussian_cousine">
+                    <p class="block__text block__text--text_top">fifth <br>reason:</p>
+                    <p class="block__text block__text--text_center">belarus</p>
+                    <p class="block__text block__text--text_down">national cuisine</p>
                 </div>
             </div>
         </div>
     </main>
     <footer></footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
