--- a/css-variables-and-js/index.html
+++ b/css-variables-and-js/index.html
@@ -17,7 +17,7 @@
         <div class="photo-editor">
             <div class="photo-area">
                 <div class="photo-area__photo">
-                    <img class="photo-area__image" src="assets/images/photo-editor.jpg" alt="dog">
+                    <img class="photo-area__image" src="./assets/images/photo-editor.jpg" alt="dog">
                 </div>
             </div>
             <div class="editor-area">
@@ -26,44 +26,44 @@
                     <hr>
                     <div class="editor-area__filter filter">
                         <button class="filter__button button" data-change-type="background">
-                            <img class="button__icon" src="assets/icons/icon-background.jpg" height="50px" width="50px" alt="icon-background">
+                            <img class="button__icon" src="./assets/icons/icon-background.jpg" height="50px" width="50px" alt="icon-background">
                             <div class="button__discription">background</div>
                         </button>
                         <button class="filter__button button" data-change-type="resize">
-                            <img class="button__icon" src="assets/icons/icon-resize.jpg" height="50px" width="50px" alt="icon-resize">
+                            <img class="button__icon" src="./assets/icons/icon-resize.jpg" height="50px" width="50px" alt="icon-resize">
                             <div class="button__discription">resize</div>
                         </button>
                         <button class="filter__button button" data-change-type="contrast">
-                            <img class="button__icon" src="assets/icons/icon-contrast.jpg" height="50px" width="50px" alt="icon-contrast">
+                            <img class="button__icon" src="./assets/icons/icon-contrast.jpg" height="50px" width="50px" alt="icon-contrast">
                             <div class="button__discription">contrast</div>
                         </button>
                         <button class="filter__button button" data-change-type="brightness">
-                            <img class="button__icon" src="assets/icons/icon-brightness.jpg" height="50px" width="50px" alt="icon-brightness">
+                            <img class="button__icon" src="./assets/icons/icon-brightness.jpg" height="50px" width="50px" alt="icon-brightness">
                             <div class="button__discription">brightness</div>
                         </button>
                         <button class="filter__button button" data-change-type="tint">
-                            <img class="button__icon" src="assets/icons/icon-tint.jpg" height="50px" width="50px" alt="icon-tint">
+                            <img class="button__icon" src="./assets/icons/icon-tint.jpg" height="50px" width="50px" alt="icon-tint">
                             <div class="button__discription">tint</div>
                         </button>
                         <button class="filter__button button" data-change-type="blur">
-                            <img class="button__icon" src="assets/icons/icon-blur.png" height="50px" width="50px" alt="icon-blur">
+                            <img class="button__icon" src="./assets/icons/icon-blur.png" height="50px" width="50px" alt="icon-blur">
                             <div class="button__discription">blur</div>
                         </button>
                         <button class="filter__button button" data-change-type="suturation">
-                            <img class="button__icon" src="assets/icons/icon-suturation.jpg" height="50px" width="50px" alt="icon-suturation">
+                            <img class="button__icon" src="./assets/icons/icon-suturation.jpg" height="50px" width="50px" alt="icon-suturation">
                             <div class="button__discription">suturation</div>
                         </button>
                         <button class="filter__button button" data-change-type="grayscale">
-                            <img class="button__icon" src="assets/icons/icon-grayscale.jpg" height="50px" width="50px" alt="icon-grayscale">
+                            <img class="button__icon" src="./assets/icons/icon-grayscale.jpg" height="50px" width="50px" alt="icon-grayscale">
                             <div class="button__discription">greyscale</div>
                         </button>
                         <button class="filter__button button" data-change-type="sepia">
-                            <img class="button__icon" src="assets/icons/icon-sepia.jpg" height="50px" width="50px" alt="icon-sepia">
+                            <img class="button__icon" src="./assets/icons/icon-sepia.jpg" height="50px" width="50px" alt="icon-sepia">
                             <div class="button__discription">sepia</div>
                         </button>
                     </div>
                     <div class="editor-area__modification modification">
-                        <form class="modification__form">
+                        <form class="modification__form form">
                         </form>
                         <div class="modification__buttons">
                             <button class="modification__exit-button button">exit</button>
