update all files

--- a/Custom Video Player/index.html
+++ b/Custom Video Player/index.html
@@ -21,7 +21,7 @@
             <form class="player__form form form--grid" name="controls">
                 <input type="range" class="form__input input-duration input-duration--width input-duration--grid-area form__input--grid-align_center" name="duration" value="0" min="0" max="" step="1">
                 <button class="form__button button button-play form__button--grid-justify_end form__button--grid-align_center">
-                    <img class="button__icon icon-play" src="./assets/icons/icon-play.jpg" alt="icon-play">
+                    <img class="button__icon icon-act" src="./assets/icons/icon-play.jpg" alt="icon-play">
                 </button>
                 <button class="form__button button button-runback form__button--grid-justify_end form__button--grid-align_center">
                     <img class="button__icon" src="./assets/icons/icon-runback.jpg" alt="icon-runback">
@@ -37,7 +37,7 @@
                     <span class="time__current-time">0:00</span> / <span class="time__general-time">0:00</span>
                 </div>
                 <button class="form__button button button-fullscreen form__button-fullscreen--grid-area form__button--grid-align_center">
-                    <img class="button__icon" src="./assets/icons/icon-fullscreen.jpg" alt="icon-fullscreen">
+                    <img class="button__icon icon-resize" src="./assets/icons/icon-fullscreen.jpg" alt="icon-fullscreen">
                 </button>
             </form>
         </div>
