--- a/Fun With Canvas/index.html
+++ b/Fun With Canvas/index.html
@@ -7,7 +7,7 @@
     <title>Paint online.</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mansalva&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,19 +17,19 @@
         <div class="page">
             <div class="paint">
                 <div class="paint__editor">
-                    <button class="paint__button button paint__button--active" data-change-type="pen">
+                    <button class="paint__button button paint__button--active" data-tooltip="pen" data-change-type="pen">
                         <img class="button__icon" src="./assets/icons/icon-pen.jpg" alt="icon-pen">
                     </button>
-                    <button class="paint__button button" data-change-type="brush">
+                    <button class="paint__button button" data-tooltip="brush" data-change-type="brush">
                         <img class="button__icon" src="./assets/icons/icon-brush.jpg" alt="icon-brush">
                     </button>
-                    <button class="paint__button button" data-change-type="palette">
+                    <button class="paint__button button" data-tooltip="pallette" data-change-type="palette">
                         <img class="button__icon" src="./assets/icons/icon-palette.jpg" alt="icon-palette">
                     </button>
-                    <button class="paint__button button" data-change-type="background">
+                    <button class="paint__button button" data-tooltip="background" data-change-type="background">
                         <img class="button__icon" src="./assets/icons/icon-background.jpg" alt="icon-background">
                     </button>
-                    <button class="paint__button button" data-change-type="eraser">
+                    <button class="paint__button button" data-tooltip="araser" data-change-type="eraser">
                         <img class="button__icon" src="./assets/icons/icon-eraser.jpg" alt="icon-eraser">
                     </button>
                     <form class="paint__form form">
