fix: implement correct animation

--- a/Flex Panel Gallery/index.html
+++ b/Flex Panel Gallery/index.html
@@ -16,44 +16,44 @@
         <div class="page">
             <div class="blocks">
                 <div class="block">
-                    <span class="block__left-top left-top--position left-top--size"></span>
-                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <div class="block__left-top left-top--position left-top--size"></div>
+                    <div class="block__right-bottom right-bottom--position right-bottom--size"></div>
                     <img class="block__image block__image--image_center" src="./assets/images/Architectural_heritage.jpg" alt="architectural_heritage">
-                    <p class="block__text block__text--text_top">first <br>reason:</p>
-                    <p class="block__text block__text--text_center">five</p>
-                    <p class="block__text block__text--text_down">architectural heritage</p>
+                    <span class="block__text block__text--text_top">first <br>reason:</span>
+                    <span class="block__text block__text--text_center">five</span>
+                    <span class="block__text block__text--text_down">architectural heritage</span>
                 </div>
                 <div class="block">
-                    <span class="block__left-top left-top--position left-top--size"></span>
-                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <div class="block__left-top left-top--position left-top--size"></div>
+                    <div class="block__right-bottom right-bottom--position right-bottom--size"></div>
                     <img class="block__image block__image--image_center" src="./assets/images/Nature.jpg" alt="nature">
-                    <p class="block__text block__text--text_top">second <br>reason:</p>
-                    <p class="block__text block__text--text_center">reasons</p>
-                    <p class="block__text block__text--text_down">nature</p>
+                    <span class="block__text block__text--text_top">second <br>reason:</span>
+                    <span class="block__text block__text--text_center">reasons</span>
+                    <span class="block__text block__text--text_down">nature</span>
                 </div>
                 <div class="block">
-                    <span class="block__left-top left-top--position left-top--size"></span>
-                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <div class="block__left-top left-top--position left-top--size"></div>
+                    <div class="block__right-bottom right-bottom--position right-bottom--size"></div>
                     <img class="block__image block__image--image_center" src="./assets/images/Military_history.jpg" alt="military_history">
-                    <p class="block__text block__text--text_top">third <br>reason:</p>
-                    <p class="block__text block__text--text_center">to</p>
-                    <p class="block__text block__text--text_down">military history</p>
+                    <span class="block__text block__text--text_top">third <br>reason:</span>
+                    <span class="block__text block__text--text_center">to</span>
+                    <span class="block__text block__text--text_down">military history</span>
                 </div>
                 <div class="block">
-                    <span class="block__left-top left-top--position left-top--size"></span>
-                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <div class="block__left-top left-top--position left-top--size"></div>
+                    <div class="block__right-bottom right-bottom--position right-bottom--size"></div>
                     <img class="block__image block__image--image_center" src="./assets/images/Belarussian_art.jpg" alt="belarussian_art">
-                    <p class="block__text block__text--text_top">fourth <br>reason:</p>
-                    <p class="block__text block__text--text_center">visit</p>
-                    <p class="block__text block__text--text_down">arts and culture</p>
+                    <span class="block__text block__text--text_top">fourth <br>reason:</span>
+                    <span class="block__text block__text--text_center">visit</span>
+                    <span class="block__text block__text--text_down">arts and culture</span>
                 </div>
                 <div class="block">
-                    <span class="block__left-top left-top--position left-top--size"></span>
-                    <span class="block__right-bottom right-bottom--position right-bottom--size"></span>
+                    <div class="block__left-top left-top--position left-top--size"></div>
+                    <div class="block__right-bottom right-bottom--position right-bottom--size"></div>
                     <img class="block__image block__image--image_center" src="./assets/images/Belarussian_cousine.png" alt="belarussian_cousine">
-                    <p class="block__text block__text--text_top">fifth <br>reason:</p>
-                    <p class="block__text block__text--text_center">belarus</p>
-                    <p class="block__text block__text--text_down">national cuisine</p>
+                    <span class="block__text block__text--text_top">fifth <br>reason:</span>
+                    <span class="block__text block__text--text_center">belarus</span>
+                    <span class="block__text block__text--text_down">national cuisine</span>
                 </div>
             </div>
         </div>
