refactor: change structure of the project

--- a/dynamic-landing-page/index.html
+++ b/dynamic-landing-page/index.html
@@ -23,16 +23,16 @@
                 <textarea class="form__textarea textarea" id="plan" name="plan" placeholder="Enter your plan" rows="3" columns="30"></textarea>
             </form>
             <div class="daytime">
-                <p class="daytime__time time">
+                <div class="daytime__time time">
                     <span class="time__hour time__number">12</span> :
                     <span class="time__minute time__number">30</span> :
                     <span class="time__second time__number">48</span>
-                </p>
-                <p class="daytime__date date">
+                </div>
+                <div class="daytime__date date">
                     <span class="date__day-of-week">Monday</span> 
                     <span class="date__date">17</span> 
                     <span class="date__month">September</span>
-                </p>
+                </div>
             </div>
         </div>
 
