--- a/drum-kit/index.html
+++ b/drum-kit/index.html
@@ -14,48 +14,57 @@
         <div class="page">
             <div class="keyboard">
                 <button class="keyboard__key key key--row_first" data-name="a">
-                        <div class="key__title">a</div>
-                        <div class="key__description">antelope</div>
+                        <span class="key__title">a</span>
+                        <br>
+                        <span class="key__description">antelope</span>
                         <audio class="key__audio" src="assets/audio/antelope.mp3" type="audio/mpeg" data-name="a"></audio>
                 </button>
                 <button class="keyboard__key key key--row_first" data-name="s">
-                        <div class="key__title">s</div>
-                        <div class="key__description">squirrel</div>
+                        <span class="key__title">s</span>
+                        <br>
+                        <span class="key__description">squirrel</span>
                         <audio class="key__audio" src="assets/audio/squirrel.mp3" type="audio/mpeg" data-name="s"></audio>
                 </button>
                 <button class="keyboard__key key key--row_first" data-name="d">
-                        <div class="key__title">d</div>
-                        <div class="key__description">donkey</div>
+                        <span class="key__title">d</span>
+                        <br>
+                        <span class="key__description">donkey</span>
                         <audio class="key__audio" src="assets/audio/donkey.mp3" type="audio/mpeg" data-name="d"></audio>
                 </button>
                 <button class="keyboard__key key key--row_first" data-name="f">
-                        <div class="key__title">f</div>
-                        <div class="key__description">fox</div>
+                        <span class="key__title">f</span>
+                        <br>
+                        <span class="key__description">fox</span>
                         <audio class="key__audio" src="assets/audio/fox.mp3" type="audio/mpeg" data-name="f"></audio>
                 </button>
                 <button class="keyboard__key key key--row_first" data-name="g">
-                        <div class="key__title">g</div>
-                        <div class="key__description">giraffe</div>
+                        <span class="key__title">g</span>
+                        <br>
+                        <span class="key__description">giraffe</span>
                         <audio class="key__audio" src="assets/audio/giraffe.mp3" type="audio/mpeg" data-name="g"></audio>
                 </button>
                 <button class="keyboard__key key key--row_second" data-name="h">
-                        <div class="key__title">h</div>
-                        <div class="key__description">horse</div>
+                        <span class="key__title">h</span>
+                        <br>
+                        <span class="key__description">horse</span>
                         <audio class="key__audio" src="assets/audio/horse.mp3" type="audio/mpeg" data-name="h"></audio>
                 </button>
                 <button class="keyboard__key key key--row_second" data-name="j">
-                        <div class="key__title">j</div>
-                        <div class="key__description">jaguar</div>
+                        <span class="key__title">j</span>
+                        <br>
+                        <span class="key__description">jaguar</span>
                         <audio class="key__audio" src="assets/audio/jaguar.mp3" type="audio/mpeg" data-name="j"></audio>
                 </button>
                 <button class="keyboard__key key key--row_second" data-name="k">
-                        <div class="key__title">k</div>
-                        <div class="key__description">kangaroo</div>
+                        <span class="key__title">k</span>
+                        <br>
+                        <span class="key__description">kangaroo</span>
                         <audio class="key__audio" src="assets/audio/kangaroo.mp3" type="audio/mpeg" data-name="k"></audio>
                 </button>
                 <button class="keyboard__key key key--row_second" data-name="l">
-                        <div class="key__title">l</div>
-                        <div class="key__description">lion</div>
+                        <span class="key__title">l</span>
+                        <br>
+                        <span class="key__description">lion</span>
                         <audio class="key__audio" src="assets/audio/lion.mp3" type="audio/mpeg" data-name="l"></audio>
                 </button>
             </div>
