--- a/css-variables-and-js/index.html
+++ b/css-variables-and-js/index.html
@@ -21,45 +21,45 @@
                 </div>
             </div>
             <div class="editor-area">
-                <!-- <div class="editor-area__wrapper"> -->
+                <div class="editor-area__wrapper">
                     <h2 class="editor-area__title title">Editor</h2>
                     <hr>
                     <div class="editor-area__filter filter">
-                        <button class="filter__button button" data-change-type="background">
-                            <img class="button__icon" src="./assets/icons/icon-background.jpg" height="50px" width="50px" alt="icon-background">
-                            <div class="button__discription">background</div>
+                        <button class="filter__button button" data-change-type="background" data-tooltip="background">
+                            <img class="button__icon" src="./assets/icons/icon-background.jpg" alt="icon-background">
+                            <span class="button__discription">background</span>
                         </button>
-                        <button class="filter__button button" data-change-type="resize">
+                        <button class="filter__button button" data-change-type="resize" data-tooltip="resize">
                             <img class="button__icon" src="./assets/icons/icon-resize.jpg" height="50px" width="50px" alt="icon-resize">
-                            <div class="button__discription">resize</div>
+                            <span class="button__discription">resize</span>
                         </button>
-                        <button class="filter__button button" data-change-type="contrast">
+                        <button class="filter__button button" data-change-type="contrast" data-tooltip="contrast">
                             <img class="button__icon" src="./assets/icons/icon-contrast.jpg" height="50px" width="50px" alt="icon-contrast">
                             <div class="button__discription">contrast</div>
                         </button>
-                        <button class="filter__button button" data-change-type="brightness">
+                        <button class="filter__button button" data-change-type="brightness" data-tooltip="brightness">
                             <img class="button__icon" src="./assets/icons/icon-brightness.jpg" height="50px" width="50px" alt="icon-brightness">
-                            <div class="button__discription">brightness</div>
+                            <span class="button__discription">brightness</span>
                         </button>
-                        <button class="filter__button button" data-change-type="tint">
-                            <img class="button__icon" src="./assets/icons/icon-tint.jpg" height="50px" width="50px" alt="icon-tint">
-                            <div class="button__discription">tint</div>
+                        <button class="filter__button button" data-change-type="tint" data-tooltip="tint">
+                            <img class="button__icon" src="./assets/icons/icon-tint.jpg" alt="icon-tint">
+                            <span class="button__discription">tint</span>
                         </button>
-                        <button class="filter__button button" data-change-type="blur">
+                        <button class="filter__button button filter__button--transform" data-change-type="blur" data-tooltip="blur">
                             <img class="button__icon" src="./assets/icons/icon-blur.png" height="50px" width="50px" alt="icon-blur">
-                            <div class="button__discription">blur</div>
+                            <span class="button__discription">blur</span>
                         </button>
-                        <button class="filter__button button" data-change-type="suturation">
+                        <button class="filter__button button filter__button--transform" data-change-type="suturation" data-tooltip="suturation">
                             <img class="button__icon" src="./assets/icons/icon-suturation.jpg" height="50px" width="50px" alt="icon-suturation">
-                            <div class="button__discription">suturation</div>
+                            <span class="button__discription">suturation</span>
                         </button>
-                        <button class="filter__button button" data-change-type="grayscale">
+                        <button class="filter__button button filter__button--transform" data-change-type="grayscale" data-tooltip="grayscale">
                             <img class="button__icon" src="./assets/icons/icon-grayscale.jpg" height="50px" width="50px" alt="icon-grayscale">
-                            <div class="button__discription">greyscale</div>
+                            <span class="button__discription">greyscale</span>
                         </button>
-                        <button class="filter__button button" data-change-type="sepia">
+                        <button class="filter__button button filter__button--transform" data-change-type="sepia" data-tooltip="sepia">
                             <img class="button__icon" src="./assets/icons/icon-sepia.jpg" height="50px" width="50px" alt="icon-sepia">
-                            <div class="button__discription">sepia</div>
+                            <span class="button__discription">sepia</span>
                         </button>
                     </div>
                     <div class="editor-area__modification modification">
@@ -70,7 +70,7 @@
                             <button class="modification__submit-button button">submit</button>
                         </div>
                     </div>
-                <!-- </div> -->
+                </div>
             </div>
         </div>
     </main>
