--- a/Fun With Canvas/index.html
+++ b/Fun With Canvas/index.html
@@ -17,21 +17,27 @@
         <div class="page">
             <div class="paint">
                 <div class="paint__editor">
-                    <button class="paint__button button paint__button--active" data-tooltip="pen" data-change-type="pen">
-                        <img class="button__icon" src="./assets/icons/icon-pen.jpg" alt="icon-pen">
-                    </button>
-                    <button class="paint__button button" data-tooltip="brush" data-change-type="brush">
-                        <img class="button__icon" src="./assets/icons/icon-brush.jpg" alt="icon-brush">
-                    </button>
-                    <button class="paint__button button" data-tooltip="pallette" data-change-type="palette">
-                        <img class="button__icon" src="./assets/icons/icon-palette.jpg" alt="icon-palette">
-                    </button>
-                    <button class="paint__button button" data-tooltip="background" data-change-type="background">
-                        <img class="button__icon" src="./assets/icons/icon-background.jpg" alt="icon-background">
-                    </button>
-                    <button class="paint__button button" data-tooltip="araser" data-change-type="eraser">
-                        <img class="button__icon" src="./assets/icons/icon-eraser.jpg" alt="icon-eraser">
-                    </button>
+                    <div class="paint__buttons">
+                        <button class="paint__button button paint__button--active" data-tooltip="pen" data-change-type="pen">
+                            <img class="button__icon" src="./assets/icons/icon-pen.jpg" alt="icon-pen">
+                        </button>
+                        <button class="paint__button button" data-tooltip="brush" data-change-type="brush">
+                            <img class="button__icon" src="./assets/icons/icon-brush.jpg" alt="icon-brush">
+                        </button>
+                        <button class="paint__button button" data-tooltip="pallette" data-change-type="palette">
+                            <img class="button__icon" src="./assets/icons/icon-palette.jpg" alt="icon-palette">
+                        </button>
+                        <button class="paint__button button" data-tooltip="background" data-change-type="background">
+                            <img class="button__icon" src="./assets/icons/icon-background.jpg" alt="icon-background">
+                        </button>
+                        <button class="paint__button button" data-tooltip="araser" data-change-type="eraser">
+                            <img class="button__icon" src="./assets/icons/icon-eraser.jpg" alt="icon-eraser">
+                        </button>
+                    </div>
+                    <div class="paint__line-width line-width">
+                        <span class="line-width__text">line<br>width</span>
+                        <div class="line-width__round"></div>
+                    </div>
                     <form class="paint__form form">
                     </form>
                 </div>
