--- a/Custom Video Player/index.html
+++ b/Custom Video Player/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video player.</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
 </head>
 <body>
     <header>
