--- a/raindrops/index.html
+++ b/raindrops/index.html
@@ -13,7 +13,8 @@
         <h1 class="visually-hidden">Raindrops.</h1>
     </header>
     <main>
-        <div class="game">
+        <div class="game game--start">
+            
             <div class="game__playing-field playing-field">
                 <div class="playing-field__drops">
                     <!-- <div class="playing-field__drop drop drop--color_blue">
@@ -104,14 +105,27 @@
             <div class="game__window window window-start">
                 <div class="window-start__title">raindrops</div>
                 <div class="window-start__container container">
+                    <!-- <form class="window-start__form">
+                        <input type="checkbox" id="scales" name="scales" checked>
+                        <label for="scales">Scales</label>
+                    </form> -->
                     <div class="window-start__buttons">
-                        <button class="window-start__button">how to play</button>
-                        <button class="window-start__button">play</button>
+                        <button class="window-start__button window-start__button-instruction">how to play</button>
+                        <button class="window-start__button window-start__button-start">play</button>
                     </div>
                 </div>
             </div>
             <div class="game__window window window-end">
-
+                <div class="window-end__container">
+                    <div class="window-end__score">
+                        <span class="window-end__score-text">your score:</span>
+                        <span class="window-end__score-number">456</span>
+                    </div>
+                    <div class="window-end__buttons">
+                        <button class="window-end__button window-end__button-exit">exit</button>
+                        <button class="window-end__button window-end__button-start">play again</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
